force-app/main/default/objects/AFT_File__c/AFT_File__c.object-meta.xml
<CustomObject>
    <label>AFT File</label>
    <nameField>
        <displayFormat>AFT-{0000}</displayFormat>
        <label>AFT File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AFT Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>