force-app/main/default/objects/AFT_File__c/fields/Debit_Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Debit_Transaction_Count__c</fullName>
    <label>Debit Transaction Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>