force-app/main/default/objects/AFT_File__c/fields/Total_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Amount__c</fullName>
    <label>Total Credit Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>